[metadata]
name = command-line-perfection
version = 0.0.1
author = SuperjakeyLKR
description = A package focused on things to do with the command line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/superjakeyLKR/clp
project_urls =
    Bug Tracker = https://github.com/superjakeyLKR/clp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src